@@ -1,5 +1,9 @@
 2012-12-28  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Add use warnings.
+	* Makefile.PL: Add use strict and use warnings.
+	* t/strict.t: New test for strict and warnings in all code.
+
 	* t/pod.t: Update coding style.
 	* t/pod-spelling.t: Use Test::Spelling instead of including a
 	less-tested version of the same code.  Update coding style.
